Changelog
=========


2.5.10a3 (unreleased)
---------------------

- Nothing changed yet.


2.5.10a2 (2011-03-11)
---------------------

- Nothing yet.


2.5.10a2 (11/03/2011)
---------------------

- Fix confirm_subscriber and addSubscriber to set salutation from subscribe portlet.
  [numahell]

- Fix ENLHTMLParser for unicode URLs.
  [timo]

- Order newsletters and drafts by creation date.
  [timo]

- Set batch_base_url in enl_subscribers_view, this fix the url of batch navigation.
  [derstappenit]


2.5.10a1 (15/02/2011)
---------------------

- plone.app.testing test setup added.
  [timo]

- Do not exclude ENL content types from navigation on a content object level.
  Exclude them on content type level in the GS profile.
  [timo]

- Fix UnboundLocalError which comes with the try except statement.
  [derstappenit]

- Fix AttributeError get_all_memberproperties if fmp is available but not installed
  in the quickinstaller.
  [derstappenit]


2.5.9 (15/02/2011)
------------------

- Fix UnboundLocalError: local variable 'o' referenced before assignment, which
  come with the try except to cache image handling errors.
  [derstappenit]


2.5.8 (14/02/2011)
------------------

- Fix optional use of fmp.
  [derstappenit]

- Only add default_template if doesnt exists, this fix error in archetypes_tool
  on update schema.
  [derstappenit]

- Add a BooleanField sendToAllPloneMembers, which can be used to address all
  existing plone members in a newsletter, no need to select all every time new
  user are available.
  [derstappenit]

- Fix url handlink for links and images if url contains empty spaces,
  add z3 resource image support, add images only to html part of the email.
  [derstappenit]

- Cache exception if broken img tags exist that can't be resolved by
  restrictedTraverse, but log the error.
  [derstappenit]


2.5.7 (08/02/2011)
------------------

- Do not encode email addresses when exporting subscribers.
  [timo]
