@@ -2,25 +2,7 @@
 <object name="portal_properties" meta_type="Plone Properties Tool">
  <object name="navtree_properties" meta_type="Plone Property Sheet">
   <property name="title">NavigationTree properties</property>
-  <property name="metaTypesNotToList" type="lines">
-   <element value="ATBooleanCriterion"/>
-   <element value="ATDateCriteria"/>
-   <element value="ATDateRangeCriterion"/>
-   <element value="ATListCriterion"/>
-   <element value="ATPortalTypeCriterion"/>
-   <element value="ATReferenceCriterion"/>
-   <element value="ATSelectionCriterion"/>
-   <element value="ATSimpleIntCriterion"/>
-   <element value="ATSimpleStringCriterion"/>
-   <element value="ATSortCriterion"/>
-   <element value="ChangeSet"/>
-   <element value="Discussion Item"/>
-   <element value="Plone Site"/>
-   <element value="TempFolder"/>
-   <element value="ATCurrentAuthorCriterion"/>
-   <element value="ATPathCriterion"/>
-   <element value="ATRelativePathCriterion"/>
-
+  <property name="metaTypesNotToList" type="lines" purge="False">
    <element value="ENLIssue" />
    <element value="ENLSubscriber" />
    <element value="ENLTemplate" />
